--- a/contact.html
+++ b/contact.html
@@ -49,11 +49,11 @@
           <div class="container col-md-5 col-sm-7 col-xs-3">
             <div class="card" style="width: 18rem;">
               <div class="card-body">
-                <a class="card-text" href="https://www.linkedin.com/in/james-todd-8a2670188" target="_blank"><i class="fab fa-linkedin fa-5x"></i></a>
+                <a class="card-text" href="https://www.linkedin.com/in/james-todd-8a2670188" target="_blank"><i class="fab fa-linkedin fa-4x"></i></a>
                 <br>
-                <a class="card-text" href="mailto:Jtodd0515@gmail.com"><i class="fas fa-envelope fa-5x"></i></a>
+                <a class="card-text" href="mailto:Jtodd0515@gmail.com" target="_blank"><i class="fas fa-envelope fa-4x"></i></a>
                 <br>
-                <a class="card-text" href="https://github.com/jtodd0515" target="_blank"><i class="fab fa-github-square fa-5x"></i></a>
+                <a class="card-text" href="https://github.com/jtodd0515" target="_blank"><i class="fab fa-github-square fa-4x"></i></a>
               </div>
             </div>
           </div>
